XM1-35887: Avoid npe and refactor some conflict merge