@@ -2,6 +2,7 @@ package com.icthh.xm.ms.entity.lep.keyresolver;
 
 import com.icthh.xm.lep.api.LepKeyResolver;
 import com.icthh.xm.lep.api.LepMethod;
+import java.util.Collections;
 import org.springframework.stereotype.Component;
 
 import java.util.List;
@@ -10,6 +11,6 @@ import java.util.List;
 public class TypeKeyResolver implements LepKeyResolver {
     @Override
     public List<String> segments(LepMethod method) {
-        return List.of(method.getParameter("typeKey", String.class));
+        return Collections.singletonList(method.getParameter("typeKey", String.class));
     }
 }
